--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -1,14 +1,24 @@
 // Use this file to overwrite the basic Bootstrap variables and add your own variables
-// To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder. 
+// To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder.
 // Just copy a variable from /sass/bootstrap/_variables.scss, paste it here and edit the value.
 // As example you find one of the most important Bootstrap variable below: $brand-primary.
 // Thats the ugly Bootstrap blue used for all the links, primary buttons etc.
 // Just add your color code here, compile the theme.scss file to change this color everywhere
 
-
 //
 // Color system
 //
 
-$primary: #7C008C;
+// Witchcraft Theme variables
+// Color palette
+$primary: #25591f;
+$secondary: #19270d;
+$tertiary: #818c3c;
+$quaternary: #72601b;
+$quinary: #593a0e;
 
+// Body
+$body-bg: #eee;
+
+// Global variables
+$enable-shadows: true;
