--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -5,8 +5,25 @@
 
 // Frontpage
 #carouselHeroImage {
-	.carousel-image {
-		max-height: 40vh;
-		object-fit: cover;
+	.carousel-item {
+		height: 50vh;
+		background: rgba(0, 0, 0, 0.2);
+		&::before {
+			content: "";
+			z-index: -1;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			background: url("../img/hero.jpg") 50% 30% / cover no-repeat;
+		}
+		& .carousel-caption {
+			position: relative;
+			top: 0px;
+			right: 0px;
+			left: 0px;
+			right: 0px;
+		}
 	}
 }
