Responsive hero fonts

--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -1,13 +1,21 @@
 // Google Fonts
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700");
 
+// Utility classes
+.text-shadow {
+	text-shadow: $text-shadow;
+}
+.text-shadow-lg {
+	text-shadow: $text-shadow-lg;
+}
+
 // Header
 
 // Frontpage
 #carouselHeroImage {
 	.carousel-item {
 		height: 50vh;
-		background: rgba(0, 0, 0, 0.2);
+		background: rgba($black, 0.2);
 		&::before {
 			content: "";
 			z-index: -1;
@@ -24,6 +32,14 @@
 			right: 0px;
 			left: 0px;
 			right: 0px;
+		}
+		h1 {
+			font-size: calc(2.5rem + 1.5vw);
+		}
+		p {
+			font-size: calc(1rem + 0.5vw);
+			letter-spacing: 1.5px;
+			font-weight: 300;
 		}
 	}
 }
