--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -18,6 +18,19 @@ $quinary: #593a0e;
 // Global variables
 $enable-shadows: true;
 $enable-responsive-font-sizes: true;
+$grid-breakpoints: (
+	xs: 0,
+	sm: 576px,
+	md: 768px,
+	lg: 992px,
+	xl: 1300px,
+) !default;
+$container-max-widths: (
+	sm: 540px,
+	md: 720px,
+	lg: 960px,
+	xl: 1240px,
+) !default;
 
 $text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 $text-shadow-lg: 2px 2px 2px rgba(0, 0, 0, 0.5);
