--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -10,10 +10,8 @@
 // Witchcraft Theme variables
 // Color palette
 $primary: #25591f;
-$secondary: #19270d;
-$tertiary: #818c3c;
-$quaternary: #72601b;
-$quinary: #593a0e;
+$secondary: #357f2c;
+$white: rgb(250, 250, 250);
 
 // Global variables
 $enable-shadows: true;
@@ -36,7 +34,7 @@ $text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 $text-shadow-lg: 2px 2px 2px rgba(0, 0, 0, 0.5);
 
 // Body
-$body-bg: #eee;
+$body-bg: #e9ecef; // gray-200
 
 // Typography;
 $font-family-cursive: "Comfortaa", cursive;
