--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -8,6 +8,10 @@
 .text-shadow-lg {
 	text-shadow: $text-shadow-lg;
 }
+.bg-gray-witch {
+	background-color: #ededed;
+	color: $gray-900;
+}
 .bg-gray-900 {
 	background-color: $gray-900;
 	color: $gray-100;
@@ -57,6 +61,6 @@
 
 .witch-feature {
 	img {
-		object-fit: contain;
+		object-fit: cover;
 	}
 }
