--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -9,4 +9,6 @@
 
 // Any additional imported files //
 @import "theme/child_theme"; // <------- Add your styles into this file
-@import "../src/sass/understrap/theme/contact-form7"; // <------- Loads some basic styling for contact form 7 plugin
+@import "theme/child_theme_woocommerce"; // <------- Add your styles into this file
+@import "theme/child_theme_contact-form7"; // <------- Add your styles into this file
+//@import "../src/sass/understrap/theme/contact-form7"; // <------- Loads some basic styling for contact form 7 plugin
