--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -9,7 +9,8 @@
 //
 // Witchcraft Theme variables
 // Color palette
-$primary: #25591f;
+$primary: #ca26a7;
+//$primary: #25591f;
 $secondary: #357f2c;
 $white: rgb(250, 250, 250);
 
@@ -33,15 +34,13 @@ $container-max-widths: (
 $text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 $text-shadow-lg: 2px 2px 2px rgba(0, 0, 0, 0.5);
 
+// WooCommerce
+$woocommerce: $primary;
+$green: $primary;
+
 // Body
 $body-bg: #e9ecef; // gray-200
 
 // Typography;
 $font-family-cursive: "Comfortaa", cursive;
 $headings-font-family: $font-family-cursive;
-//$font-size-base: 1rem;
-// $h1-font-size: $font-size-base * 2.1;
-// $h2-font-size: $font-size-base * 1.6;
-// $h3-font-size: $font-size-base * 1.5;
-// $h4-font-size: $font-size-base * 1.25;
-// $h5-font-size: $font-size-base * 1.1;
