--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -4,14 +4,18 @@
 // As example you find one of the most important Bootstrap variable below: $brand-primary.
 // Thats the ugly Bootstrap blue used for all the links, primary buttons etc.
 // Just add your color code here, compile the theme.scss file to change this color everywhere
-//
-// Color system
-//
+
 // Witchcraft Theme variables
+
 // Color palette
+// Pink test
 // $primary: #ca26a7;
-$primary: #25591f;
-$secondary: #357f2c;
+// Old
+//$primary: #25591f;
+//$secondary: #357f2c;
+
+$primary: #30662f;
+$secondary: #c0b19a;
 $white: rgb(250, 250, 250);
 
 // Global variables
