--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -1,6 +1,14 @@
 // Google Fonts
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700");
 
+// Functions
+@function set-text-color($color) {
+	@if (lightness($color) > 50) {
+		@return $gray-900;
+	} @else {
+		@return $gray-100;
+	}
+}
 // Utility classes
 .text-shadow {
 	text-shadow: $text-shadow;
@@ -15,6 +23,12 @@
 .bg-gray-900 {
 	background-color: $gray-900;
 	color: $gray-100;
+}
+.bg-primary {
+	color: set-text-color($primary);
+}
+.bg-secondary {
+	color: set-text-color($secondary);
 }
 
 // Global
@@ -43,7 +57,7 @@ h6 {
 			left: 0px;
 			width: 100%;
 			height: 100%;
-			background: url("../img/hero.jpg") 50% 30% / cover no-repeat;
+			background: url("../img/hero.png") 50% 30% / cover no-repeat;
 		}
 		& .carousel-caption {
 			position: relative;
