--- a/sass/theme/_child_theme_forms.scss
+++ b/sass/theme/_child_theme_forms.scss
@@ -14,30 +14,32 @@
 
 // keep a max width in case it is just the form and nothing else
 // we do not want a form spanning whole page
+input[type="text"],
+input[type="search"],
+input[type="url"],
+input[type="tel"],
+input[type="number"],
+input[type="range"],
+input[type="date"],
+input[type="month"],
+input[type="week"],
+input[type="time"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="color"],
+input[type="email"],
+input[type="file"],
+input[type="submit"],
+input[type="password"],
+select,
+textarea {
+	@extend .form-control;
+}
+
 .wpcf7 {
 	max-width: 600px;
 
 	// all inputs except radios and checkboxes inherit from form-control
-	input[type="text"],
-	input[type="search"],
-	input[type="url"],
-	input[type="tel"],
-	input[type="number"],
-	input[type="range"],
-	input[type="date"],
-	input[type="month"],
-	input[type="week"],
-	input[type="time"],
-	input[type="datetime"],
-	input[type="datetime-local"],
-	input[type="color"],
-	input[type="email"],
-	input[type="file"],
-	input[type="submit"],
-	select,
-	textarea {
-		@extend .form-control;
-	}
 
 	// submit button, inherit .btn and .btn-outline-primary classes.
 	input[type="submit"] {
