Add dynamic feature columns

--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -28,6 +28,7 @@
 $utility-colors: (
 	primary: $primary,
 	secondary: $secondary,
+	gray-100: $gray-100,
 	gray-200: $gray-200,
 	gray-900: $gray-900,
 );
