--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -61,7 +61,7 @@ h6 {
 }
 
 // Blocks
-#carouselHeroImage {
+.hero-image {
 	.carousel-item {
 		height: 50vh;
 		@media only screen and (max-height: 800px) {
@@ -76,7 +76,8 @@ h6 {
 			left: 0px;
 			width: 100%;
 			height: 100%;
-			background: url("../img/hero.png") 50% 30% / cover no-repeat;
+			background: var(--hero-background-url) center / cover no-repeat;
+			background-position-y: var(--hero-background-position);
 		}
 		& .carousel-caption {
 			position: relative;
