--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
- Theme Name:   Understrap Child
- Theme URI:    https://understrap.com
- Description:  Understrap Child Theme
- Author:       the Understrap Contributors
- Author URI:   https://github.com/understrap/understrap-child/graphs/contributors
+ Theme Name:   Witchcraft Theme
+ Theme URI:    https://github.com/krisp3t/witchcraft-theme
+ Description:  A theme for witches and wizards, made for WordPress blogs and WooCommerce stores. Based on UnderStrap.
+ Author:       krisp3t
+ Author URI:   https://github.com/krisp3t/
  Template:     understrap
- Version:      0.6.0
+ Version:      0.0.1
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  understrap-child
