--- a/sass/theme/_child_theme_woocommerce.scss
+++ b/sass/theme/_child_theme_woocommerce.scss
@@ -5,12 +5,15 @@
 	}
 	.price,
 	.stock,
-	.onsale,
 	.discount td {
 		color: $gray-700 !important;
 		font-weight: bold !important;
 		font-family: $font-family-cursive;
 		letter-spacing: $letter-spacing-lg;
+	}
+	.onsale {
+		background-color: $primary;
+		color: color-contrast($primary);
 	}
 	li.product {
 		.woocommerce-loop-category__title,
