Add Cookie Compliance styling

--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -13,3 +13,4 @@
 @import "theme/child_theme";
 @import "theme/child_theme_woocommerce";
 @import "theme/child_theme_forms";
+@import "theme/child_theme_plugins";
