--- a/sass/theme/_child_theme_plugins.scss
+++ b/sass/theme/_child_theme_plugins.scss
@@ -7,3 +7,9 @@
 		font-family: inherit !important;
 	}
 }
+
+#languageSwitcher {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+}
