--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -130,3 +130,21 @@ h1 {
 		margin-left: -1px;
 	}
 }
+
+// Shopping cart number
+.fa.fa-shopping-cart:after {
+	content: "2";
+	position: absolute;
+	border-radius: 50%;
+	margin-top: 10px;
+	margin-left: -5px;
+	width: 0.9rem;
+	height: 0.9rem;
+	background-color: #c7d5c7;
+	color: $gray-800;
+	font-family: $font-family-sans-serif;
+	text-align: center;
+	font-weight: bold;
+	font-size: 0.75rem;
+	line-height: 0.9rem;
+}
