--- a/sass/theme/_child_theme_woocommerce.scss
+++ b/sass/theme/_child_theme_woocommerce.scss
@@ -124,3 +124,47 @@
 		}
 	}
 }
+
+// The Loop
+.witch-products {
+	list-style: none;
+	width: 100%;
+	padding-left: 0;
+	margin-left: 0;
+
+	h2 {
+		font-size: 1rem;
+		@include media-breakpoint-up(md) {
+			font-size: 1.25rem;
+		}
+	}
+
+	.product {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		word-break: break-word;
+		img {
+			padding-bottom: 0.5rem;
+		}
+		a.woocommerce-loop-product__link {
+			text-decoration: underline transparent;
+			transition: text-decoration 0.5s;
+			&:hover {
+				text-decoration-color: $primary;
+			}
+
+			span.price {
+				color: $gray-800;
+				font-weight: bold;
+				font-family: $font-family-cursive;
+				letter-spacing: $letter-spacing-lg;
+			}
+		}
+
+		.add-to-cart-container {
+			margin-top: 0.5rem;
+			margin-bottom: 1rem;
+		}
+	}
+}
