Add Shop sidebar functionality

--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -11,6 +11,7 @@
 
 // Witchcraft Theme //
 @import "theme/child_theme";
+@import "theme/child_theme_widgets";
 @import "theme/child_theme_woocommerce";
 @import "theme/child_theme_forms";
 @import "theme/child_theme_plugins";
