--- a/sass/theme/_child_theme_woocommerce.scss
+++ b/sass/theme/_child_theme_woocommerce.scss
@@ -169,6 +169,7 @@
 			height: 100%;
 			display: flex;
 			flex-direction: column;
+
 			&:hover > * {
 				text-decoration: underline $primary;
 			}
@@ -176,6 +177,11 @@
 				box-shadow: $box-shadow-sm;
 				padding: 0;
 				margin: 1rem auto;
+				transition: opacity 0.2s;
+				opacity: 1;
+			}
+			img:hover {
+				opacity: 0.8;
 			}
 			h2 {
 				padding: 0 5%;
