Update widget styling

--- a/sass/theme/_child_theme_forms.scss
+++ b/sass/theme/_child_theme_forms.scss
@@ -36,16 +36,16 @@ textarea {
 	@extend .form-control;
 }
 
+// submit button, inherit .btn and .btn-outline-primary classes.
+input[type="submit"] {
+	@extend .btn;
+	@extend .btn-primary;
+}
+
 .wpcf7 {
 	max-width: 600px;
 
 	// all inputs except radios and checkboxes inherit from form-control
-
-	// submit button, inherit .btn and .btn-outline-primary classes.
-	input[type="submit"] {
-		@extend .btn;
-		@extend .btn-outline-primary;
-	}
 
 	.wpcf7-form {
 		// set paragraphs to behave like divs with class .form-group
