--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -29,6 +29,7 @@ $container-max-widths: (
 ) !default;
 
 // Utility Classes
+$box-shadow-xsm: 0 0.063rem 0.125rem rgba(0, 0, 0, 0.05);
 $box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
 $box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.15);
 
