--- a/sass/theme/_child_theme_woocommerce.scss
+++ b/sass/theme/_child_theme_woocommerce.scss
@@ -23,6 +23,11 @@
 	.onsale {
 		background-color: $primary;
 		color: color-contrast($primary);
+		position: absolute;
+		margin-left: auto;
+		margin-right: auto;
+		top: 0;
+		left: 0;
 	}
 	li.product {
 		.woocommerce-loop-category__title,
@@ -67,6 +72,7 @@
 		display: flex !important;
 		border: 0 !important;
 		margin: auto !important;
+		box-shadow: $box-shadow-xsm;
 
 		li {
 			border-right: 0 !important;
