--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -10,7 +10,9 @@
 //@import "../src/sass/understrap/theme/contact-form7"; // <------- Loads some basic styling for contact form 7 plugin
 
 // Witchcraft Theme //
+@import "theme/child_theme_functions";
 @import "theme/child_theme";
+@import "theme/child_theme_blog";
 @import "theme/child_theme_widgets";
 @import "theme/child_theme_woocommerce";
 @import "theme/child_theme_forms";
