--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -40,8 +40,17 @@ $body-bg: #e9ecef; // gray-200
 $enable-responsive-font-sizes: true;
 $font-family-cursive: "Comfortaa", cursive;
 $headings-font-family: $font-family-cursive;
+
 $text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 $text-shadow-lg: 2px 2px 2px rgba(0, 0, 0, 0.5);
 $letter-spacing-lg: 1.5px;
+
+$font-size-base: 1rem !default;
+$h1-font-size: $font-size-base * 2.25;
+$h2-font-size: $font-size-base * 1.75;
+$h3-font-size: $font-size-base * 1.5;
+$h4-font-size: $font-size-base * 1.25;
+$h5-font-size: $font-size-base * 1.1;
+$h6-font-size: $font-size-base !default;
 
 $h1-mb: 1rem; // Margin bottom
